# raytracer_weekend

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conandata.yml  conanfile.py
include/: angles.h  angles.hpp  camera.h  consts.h  gamma.h  gamma.hpp  images.h  interpolation.h  interpolation.hpp  objects.h  path_tracer.h  path_tracer_main.h  random.h  random.hpp  ray.h  types.h  types.hpp
include/path_tracer/: camera.h  camera.hpp  objects.h  objects.hpp  path_tracer.h  path_tracer.hpp  ray.h  ray.hpp  rendering_service.h  rendering_service.hpp  world.h  world.hpp
include/path_tracer/materials/: dielectric.h  dielectric.hpp  lambertian.h  lambertian.hpp  material.h  material.hpp  metal.h  metal.hpp
include/state/: app_state.h  app_state.hpp
include/ui/: config_window.h  config_window.hpp  rendering_window.h  rendering_window.hpp
notebooks/: schlick.ipynb
src/: main.cpp
